--- a/styles.css
+++ b/styles.css
@@ -39,13 +39,14 @@ p {
   bottom: 0;
   left: 0;
   width: 100%;
-  background: #333;
+  background: rgba(51, 51, 51, 0.5); /* Transparansi 50% */
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
   z-index: 10;
 }
+
 
 .start {
   display: flex;
