--- a/styles.css
+++ b/styles.css
@@ -94,10 +94,22 @@ p {
   align-items: center;
 }
 
-.jam {
+.jam-tanggal {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
   color: #00ff41;
   font-size: 1.2em;
-  margin-right: 20px;
+  margin-left: 20px;
+}
+
+.jam {
+  font-size: 1.5em;
+}
+
+.tanggal {
+  font-size: 1.2em;
+  margin-top: 5px;
 }
 
 .notifikasi {
@@ -126,14 +138,13 @@ p {
 /* Pop-up untuk Jam Analog dan Kalender */
 #clock-container {
   position: fixed;
-  top: 20%;
-  left: 20%;
-  background-color: #333;
+  top: 10px;
+  right: 10px;
+  background-color: rgba(0, 0, 0, 0.9); /* Transparansi 90% */
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px #00ff41;
   z-index: 100;
-  display: none;
 }
 
 #analogClock {
