--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ p {
   position: absolute;
   bottom: 30px;
   left: 0;
-  background-color: #333;
+  background-color: rgba(51, 51, 51, 0.9); /* Transparansi 90% */
   padding: 10px;
   border-radius: 5px;
   box-shadow: 0 0 10px #00ff41;
