--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ canvas {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 0; /* Memastikan RainMatrix di layer paling bawah */
 }
 
 /* Styling untuk Content */
@@ -141,8 +141,8 @@ p {
 }
 
 #analogClock {
-  width: 150px;  /* Mengurangi ukuran jam analog */
-  height: 150px;
+  width: 180px;  /* Ukuran jam analog yang lebih besar */
+  height: 180px;
   position: relative;
   background-color: #222;
   border-radius: 50%;
@@ -155,10 +155,10 @@ p {
 #calendar {
   margin-top: 10px;
   color: #fff;
-  font-size: 1em;
+  font-size: 1.2em;
   text-align: center;
   font-family: 'Arial', sans-serif;
-  padding: 5px;
+  padding: 10px;
   background-color: #444;
   border-radius: 5px;
   width: 100%;
