--- a/styles.css
+++ b/styles.css
@@ -177,6 +177,20 @@ p {
   margin-top: 10px;
 }
 
+/* Styling Taskbar */
+.taskbar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: rgba(51, 51, 51, 0.8); /* Transparansi 80% */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  z-index: 10; /* Taskbar di atas RainMatrix */
+}
+
 /* Animasi pop-up Start Menu */
 .start-menu-show {
   display: block !important;
