--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,10 @@ p {
   color: #fff;
 }
 
+.jam-tanggal {
+  text-align: center;
+}
+
 .notifikasi {
   position: relative;
   cursor: pointer;
@@ -92,9 +96,9 @@ p {
 .start-menu {
   display: none;
   position: absolute;
-  bottom: 30px;
+  bottom: 40px;
   left: 0;
-  background-color: #333;
+  background-color: rgba(51, 51, 51, 0.9); /* Transparansi 90% */
   padding: 10px;
   border-radius: 5px;
   box-shadow: 0 0 10px #00ff41;
@@ -122,7 +126,7 @@ p {
 /* Pop-up untuk Jam Analog dan Kalender */
 #clock-container {
   position: fixed;
-  top: 10px;
+  bottom: 50px;
   right: 10px;
   background-color: rgba(0, 0, 0, 0.9); /* Transparansi 90% */
   padding: 20px;
@@ -132,15 +136,13 @@ p {
 }
 
 #analogClock {
-  width: 300px;
-  height: 300px;
+  width: 150px;
+  height: 150px;
   position: relative;
   background-color: #222;
   border-radius: 50%;
   box-shadow: 0 0 15px #00ff41;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin: 0 auto;
 }
 
 #calendar {
