--- a/styles.css
+++ b/styles.css
@@ -1,124 +1,94 @@
-/* Styling untuk Body dan Canvas */
-body, html {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background: #000;
-  color: #00ff41;
-  font-family: 'Courier New', Courier, monospace;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-canvas {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
+body {
+    font-family: Arial, sans-serif;
+    overflow: hidden;
+    background: #000;
+    color: #00ff00;
 }
 
-/* Styling untuk Content */
-.content {
-  position: relative;
-  z-index: 2;
-  text-align: center;
-  margin: 20%;
+.rain-matrix {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('rain-matrix.gif') no-repeat center center/cover;
+    z-index: -1;
 }
 
-h1 {
-  font-size: 3em;
-  text-shadow: 0 0 10px #00ff41, 0 0 20px #00ff41;
-}
-
-p {
-  font-size: 1.5em;
-  text-shadow: 0 0 5px #00ff41;
-}
-
-/* Styling Taskbar */
 .taskbar {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background: rgba(51, 51, 51, 0.8); /* Transparansi 80% */
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 20px;
-  z-index: 10;
-}
-
-.start {
-  display: flex;
-  align-items: center;
-  position: relative;
-}
-
-.logo {
-  width: 20px;
-  margin-right: 10px;
-  cursor: pointer;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 40px;
+    background: rgba(0, 0, 0, 0.9);
+    display: flex;
+    justify-content: space-between;
+    color: white;
 }
 
 .start-menu {
-  display: none;
-  position: absolute;
-  bottom: 30px;
-  left: 0;
-  background-color: #333;
-  padding: 10px;
-  border-radius: 5px;
-  box-shadow: 0 0 10px #00ff41;
-  z-index: 20;
-  width: 200px; /* Lebar Start Menu mirip Windows 7 */
+    position: absolute;
+    bottom: 40px;
+    left: 10px;
+    width: 300px;
+    background: rgba(20, 20, 20, 0.95);
+    border: 1px solid #333;
+    display: none;
+    flex-direction: column;
+    color: #00ff00;
 }
 
-.start-menu ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+.user-profile {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid #333;
 }
 
-.start-menu li {
-  color: #fff;
-  padding: 10px;
-  cursor: pointer;
-  border-bottom: 1px solid #444;
+.user-profile img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 10px;
 }
 
-.start-menu li:hover {
-  background-color: #00ff41;
+.menu-content {
+    padding: 10px;
 }
 
-.taskbar-content {
-  display: flex;
-  align-items: center;
+.taskbar-left, .taskbar-right {
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
 }
 
-.jam {
-  color: #00ff41;
-  font-size: 1.2em;
-  margin-right: 20px;
+.time-date {
+    cursor: pointer;
 }
 
-.notifikasi {
-  position: relative;
-  cursor: pointer;
-  color: #fff;
-  margin-right: 20px;
+.popup {
+    display: none;
+    position: absolute;
+    right: 10px;
+    bottom: 50px;
+    background: rgba(0, 0, 0, 0.9);
+    color: #00ff00;
+    border: 1px solid #333;
+    padding: 10px;
 }
 
-.notifikasi:hover .notif-message {
-  display: block;
-}
-
-.notif-message {
-  position: absolute;
-  bottom: 30px;
-  left: -100px;
-  background: #00ff41;
-  color: #000;
-  padding: 5px 10px;
-  border-radius: 5px;
-  display: none;
-  font-size: 0.9em;
+.main-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #00ff00;
 }
