--- a/styles.css
+++ b/styles.css
@@ -11,13 +11,12 @@ body {
     color: #00ff00;
 }
 
-.rain-matrix {
+#matrix-canvas {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('rain-matrix.gif') no-repeat center center/cover;
     z-index: -1;
 }
 
@@ -87,6 +86,12 @@ body {
 .main-content {
     position: absolute;
     top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #00ff00;
+}
+
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
